styles.css
:root {
  --background-color-light: #ffffff;
  --text-color-light: #000000;
  --background-color-dark: #121212;
  --text-color-dark: #ffffff;
}
body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
body, html {
  height: 100%;
  color: #777;
  line-height: 1.8;
}
body {
  background-color: var(--background-color-light);
  color: var(--text-color-light);
}
/* Dark Mode */
.dark-mode {
  background-color: var(--background-color-dark);
  color: var(--text-color-dark);
}
#darkModeToggle {
  float: right;
  border-radius: 5px;
  border: none;
}
#darkModeToggle:hover {
  background: black;
  color: white;
}
/* Active nav element responsive to scrolling */
.active {
  color: black;
}
/* Create a Parallax Effect */
.whiteSandBeachImg, .airplaneImg, .rocksImg {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* First image (Beach. Full height) */
.whiteSandBeachImg {
  background-image: url(./images/pexels_WhiteSandBeach_PalmTrees.jpg);
  min-height: 100%;
}

/* Second image (Portfolio) */
.airplaneImg {
  background-image: url(./images/pexels_propairplane.jpg);
  min-height: 400px;
}

/* Third image (Contact) */
.rocksImg {
  background-image: url(./images/pexels_rockycliff.jpg);
  min-height: 400px;
}

.w3-wide {letter-spacing: 10px;}
.w3-hover-opacity {cursor: pointer;}

/* Turn off parallax scrolling for tablets and phones */
@media only screen and (max-device-width: 1600px) {
  .bgimg-1, .bgimg-2, .bgimg-3 {
    background-attachment: scroll;
    min-height: 400px;
  }
}

